Update desktop version

--- a/index.html
+++ b/index.html
@@ -25,13 +25,15 @@
                 </div>
             </div>
             <div class="right-navbar">
-                <a href="#">Book Now</a>
+                <a href="#">BOOK NOW</a>
             </div>
         </div>
         <div class="main-contents">
             <div class="main-text">
                 <div class="container-main">
-                    <h1>Stay once, carry memories Forever.</h1>
+                    <h1>Stay once,</h1>
+                    <h1>carry memories</h1>
+                    <h1>Forever.</h1>
                     <p class="main">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Neque minus temporibus, ex perferendis sunt suscipit. Vel laboriosam eligendi delectus voluptatem.</p>
                 </div>
             </div>
