--- a/index.html
+++ b/index.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>Rayal Park - Great Hotels Just for You</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <!-- Add icon logo -->
+    <link rel="icon" href="img/rayalpark.png">
+
+    <!-- Add necessary file and cdn -->
     <link rel="stylesheet" href="style/stylesheet.css">
     <link rel="stylesheet" href="style/responsive.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <script src="https://kit.fontawesome.com/18cbcebdd2.js" crossorigin="anonymous"></script>
+    <script src="script.js"></script>
 </head>
 <body>
 
@@ -304,13 +312,13 @@
     <footer>
         <div class="container">
             <div class="social-media">
-                    <a href="#">
+                    <a href="https://www.linkedin.com/in/lintangpratama/">
                         <span class="fa fa-linkedin" aria-hidden="true"></span>
                     </a>
-                    <a href="#">
-                        <span class="fa fa-twitter" aria-hidden="true"></span>
+                    <a href="https://lintangpratama.medium.com/">
+                        <span class="fab fa-medium-m" aria-hidden="true"></span>
                     </a>
-                    <a href="#">
+                    <a href="https://www.instagram.com/lintangpratama_/">
                         <span class="fa fa-instagram" aria-hidden="true"></span>
                     </a>
             </div>
@@ -318,7 +326,5 @@
         </div>
     </footer>
 
-    <!-- JavaScript file -->
-    <script src="script.js"></script>
 </body>
 </html>
