fix: fix whitespace aos bug

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           <div class="image-about" data-aos="fade-up">
             <img src="img/resort.jpg" alt="image" />
           </div>
-          <div class="box-about" data-aos="fade-right">
+          <div class="box-about" data-aos="fade-down">
             <div class="box-contents">
               <h2>We Strived Only for The Best!</h2>
               <p>
@@ -104,7 +104,7 @@
     <div class="our-services" id="services">
       <div class="container">
         <div class="services-contents">
-          <div class="box-description" data-aos="fade-left">
+          <div class="box-description" data-aos="fade-up">
             <h2>See Our Services</h2>
             <p>
               Lorem ipsum, dolor sit amet consectetur elit. Consectetur debitis
@@ -160,7 +160,7 @@
           </div>
         </div>
         <div class="plan-contents">
-          <div class="plan-card" data-aos="fade-right">
+          <div class="plan-card" data-aos="fade-down">
             <img src="img/classic-room-cropped.jpg" alt="classic room" />
             <div class="plan-content">
               <h4>Classic Room</h4>
@@ -196,7 +196,7 @@
               </div>
             </div>
           </div>
-          <div class="plan-card" data-aos="fade-left">
+          <div class="plan-card" data-aos="fade-up">
             <img src="img/modern-room-cropped.jpg" alt="modern room" />
             <div class="plan-content">
               <h4>Modern Room</h4>
@@ -231,7 +231,7 @@
           </div>
         </div>
         <div class="blog-contents">
-          <div class="blog" data-aos="fade-right">
+          <div class="blog" data-aos="fade-down">
             <img src="img/resort.jpg" alt="resort picture" />
             <div class="blog-info">
               <div class="time-posted">
@@ -257,7 +257,7 @@
               </p>
             </div>
           </div>
-          <div class="blog second" data-aos="fade-left">
+          <div class="blog second" data-aos="fade-up">
             <img src="img/villa.jpg" alt="villa picture" />
             <div class="blog-info">
               <div class="time-posted">
@@ -296,10 +296,10 @@
           <h3>See Satisfied Traveler Reviews</h3>
         </div>
         <div class="review">
-          <div class="image-review" data-aos="fade-right">
+          <div class="image-review" data-aos="fade-down">
             <img src="img/japan-views.jpg" alt="views image" />
           </div>
-          <div class="review-box" data-aos="fade-right" data-aos="zoom-in-left">
+          <div class="review-box" data-aos="fade-down">
             <div class="arrow-buttons">
               <a href="#">
                 <span class="material-icons-outlined"> navigate_before </span>
